[FNR_10] - Se actualiza informacion de estado

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>My Resume</title>
-  <base href="/myResume/">
+  <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/css/aos.css" rel="stylesheet">
@@ -38,5 +39,5 @@
   <script src="assets/js/now-ui-kit.js?v=1.1.0"></script>
   <script src="assets/js/aos.js"></script>
   <script src="assets/js/main.js"></script>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3bfd66addbd0d2814591.js"></script><script type="text/javascript" src="main.204d8dd36c39256d9976.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.3bfd66addbd0d2814591.js"></script><script type="text/javascript" src="main.e6d9eef475425878175d.js"></script></body>
 </html>
